--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2021, 2024 Contributors to the Eclipse Foundation
+# Copyright (c) 2021, 2026 Contributors to the Eclipse Foundation
 #
 # This program and the accompanying materials are made available under the
 # terms of the Eclipse Public License v. 2.0 which is available at
@@ -15,6 +15,8 @@ name: XML WS API
 on:
   pull_request:
   push:
+    branches:
+      - master
 
 jobs:
   build:
@@ -23,7 +25,7 @@ jobs:
 
     strategy:
       matrix:
-        java_version: [ 21 ]
+        java_version: [ 21, 25 ]
 
     steps:
     - name: Checkout for build
